# flappy-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  baghie.cpp  build.bat  build_debug.bat  clear_build.bat  imgui.ini  run.bat  run_debug.bat
data/shaders/: default.frag  default.vert  font.frag  fragment.frag
data/textures/: images.jfif
dependencies/glad/glad/: glad.c  glad.h
dependencies/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw/examples/: Makefile  cmake_install.cmake
dependencies/glfw/src/: Makefile  cmake_install.cmake
dependencies/glfw/tests/: Makefile  cmake_install.cmake
dependencies/include/glad/: glad.c  glad.h  sglad.c  sglad.h
flappy/: entry_point.hpp  sandbox.hpp
include/: engine.hpp
sandbox/: sandbox.cpp
scripts/: build.bat  build.sh  build_debug.bat  clear_build.bat  clear_build.sh  run.bat  run.sh  run_debug.bat
scripts/Linux/: build.sh  build_debug.sh  clear_build.sh  install.sh  run.sh  run_debug.sh
scripts/Windows/: build.bat  build_debug.bat  clear_build.bat  run.bat  run_debug.bat
shaders/: fragment.frag  vertex.vert
src/: application.hpp  engine_pch.hpp  flappy_app.cpp  flappy_app.hpp  main.cpp  window.cpp  window.hpp
src/core/: application.cpp  application.hpp  core.cpp  core.hpp  core_module.cpp  engine_interface.cpp  engine_interface.hpp  entry_point.cpp  event.cpp  event.hpp  flappy_app.cpp  flappy_app.hpp  window.cpp  window.hpp
src/graphics/: buffers.hpp  buffers.inl  camera.cpp  camera.hpp  font.cpp  font.hpp  font_loader.cpp  font_loader.hpp  gl_data_types.hpp  gl_driver_info.cpp  gl_driver_info.hpp  graphics_module.cpp  mesh.cpp  mesh.hpp  particle.hpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shapes.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  texture_manager.cpp  texture_manager.hpp  transform.cpp  transform.hpp  transform_2D.cpp  transform_2D.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  (+1 more)
src/maths/: curves.cpp  curves.hpp  math_exception.cpp  math_exception.hpp  maths_module.cpp  matrix.hpp  matrix.inl  matrix_operations.hpp  matrix_operations.inl  vector2D.hpp  vector2D.inl  vector3D.hpp  vector3D.inl  vector4D.hpp  vector4D.inl
src/utils/: file_loader.cpp  file_loader.hpp  helpers.hpp  lerp.cpp  lerp.hpp  logger.cpp  logger.hpp  random.hpp  time.cpp  time.hpp  utils_module.cpp
